test/errhandling/ferguson/throw-unmanaged.good
throw-unmanaged.chpl:1: In function 'foo':
throw-unmanaged.chpl:3: error: Throwing unmanaged error - please throw owned
