test/errhandling/ferguson/throw-unmanaged.chpl
proc foo() throws {
  // Warning
  throw new unmanaged IllegalArgumentError("Error message.");
}

foo();
